ManageMessageGroups: Fix issue with rename dropdown not being visible
Caused by Ie8f2ca607565cc2a4c1f3675069befacc85ebf85

--- a/resources/css/ext.translate.special.managegroups.less
+++ b/resources/css/ext.translate.special.managegroups.less
@@ -104,7 +104,7 @@
 		display: block;
 	}
 
-	.smg-rename-dropdown-menu button {
+	button {
 		display: block;
 		background: none;
 		border: 0;
